--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18"
   },
   "scripts": {
     "start": "react-scripts start",
